Fix (pdfwrite) : errors in XMP metadata parsing

Bug #691562 "ERROR -15 closing pdfwrite device".

This use of a DOCINFO pdfmark exposed 3 separate bugs in pdfwrite's handling of XMP
metadata.

1) Decoding an escaped PostScript string. Unescaped characters and octal escapes worked
correctly, but non-octal escapes moved the index into the string one place too many.

2) The escape '\b' (backspace) wasn't handled and returned incorrect data. Although not
tested by this issue, the form feed (\f) also wasn't handled.

3) When converting UTF16 data to UTF-8, the end of the destination (UTF-8) buffer was
calculated incorrectly, causing a spurious buffer overrun error.

The code now handles the missing escapes, does not advance the character position after
decoding a non-octal escape and correctly defines the end of buffer. After this the
Title string displays the same in Acrobat as the same pdfmark sent through Adobe
Distiller.

No expected differences as this only affects the document metadata.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11649 a1074d23-0009-0410-80fe-cf8c14f379e6